meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/metrics/system_metrics/snapshots/memfaultd__metrics__system_metrics__vm__tests__vm_metrics_calculation-2.snap
---
source: memfaultd/src/metrics/system_metrics/vm.rs
expression: metrics3
---
[
  {
    "name": "memory/vm/swaps_in_per_second",
    "value": {
      "Histogram": {
        "value": 5.3,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "memory/vm/swaps_out_per_second",
    "value": {
      "Histogram": {
        "value": 2.6,
        "timestamp": "[timestamp]"
      }
    }
  }
]
