meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/metrics/system_metrics/snapshots/memfaultd__metrics__system_metrics__vm__tests__vm_metrics_calculation-3.snap
---
source: memfaultd/src/metrics/system_metrics/vm.rs
expression: metrics4
---
[
  {
    "name": "memory/vm/swaps_in_per_second",
    "value": {
      "Histogram": {
        "value": 0.0,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "memory/vm/swaps_out_per_second",
    "value": {
      "Histogram": {
        "value": 0.0,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "memory/vm/pages_in_per_second",
    "value": {
      "Histogram": {
        "value": 0.0,
        "timestamp": "[timestamp]"
      }
    }
  },
  {
    "name": "memory/vm/pages_out_per_second",
    "value": {
      "Histogram": {
        "value": 0.0,
        "timestamp": "[timestamp]"
      }
    }
  }
]
